quick fixes ; a align in iframe.css, aside R width under control, updated css file of notfound.html

--- a/publicdeploy/iframe.css
+++ b/publicdeploy/iframe.css
@@ -40,7 +40,6 @@ a {
   color: var(--secondarycolor);
   font-weight: bold;
   text-decoration: underline;
-  vertical-align: middle;
   transition: 0.2s ease-in-out;
   text-underline-offset: 2px;
 }
